Fixes to accordion on mobile devices

--- a/assets/css/css.styl
+++ b/assets/css/css.styl
@@ -112,6 +112,12 @@ nav ul, .wordcloud, .gridcontainer, .griditem ul, .cards, .links, .details, .art
 .articles, .effects, #effectslist
   line-height 1.25
 
+// Index pages
+.accordionButton
+  display block 
+  // Make the accordion link take up the full size of its container
+  // this makes much more sense on mobile
+
 // Category pages
 // Hack to make last row align left
 .placeholder
